kubernetes/apps/storage/gitea/gitea/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: gitea
        app: gitea
    spec:
      containers:
        - name: gitea
          image: docker.gitea.com/gitea:28.1.0@sha256:f505a0d3a41323b786e05942fc7a4075e07ae7c169fd9485649aa55ee543a21a
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: gitea-data
              mountPath: /data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
