kubernetes/apps/storage/gitea/gitea/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
spec:
  parentRefs:
    - name: traefik
      namespace: networking
      sectionName: websecure-cloud
  hostnames:
    - gitea.cloud.traunseenet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea
          port: 3000
