kubernetes/apps/storage/gitea/gitea/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - gitea.cloud.traunseenet.com
      secretName: gitea-cert
  ingressClassName: traefik
  rules:
    - host: gitea.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: http
